Native/Test/KL/alias-errors.out
alias-errors.kl:1:1: error: 'UnregisteredType': type not registered
alias-errors.kl:3:1: error: type 'AliasTypeTwo' already registered with a different definition
