Native/Test/KL/alias-errors.kl
alias UnregisteredType AliasTypeOne;
alias Integer AliasTypeTwo;
alias Scalar AliasTypeTwo;
